--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "js_tutorial",
   "version": "1.0.0",
   "description": "This is just basics of Js",
-  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -15,5 +14,16 @@
   "bugs": {
     "url": "https://github.com/AbhijeetRohilla/Javascript-Master/issues"
   },
-  "homepage": "https://github.com/AbhijeetRohilla/Javascript-Master#readme"
+  "homepage": "https://github.com/AbhijeetRohilla/Javascript-Master#readme",
+  "devDependencies": {
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "browserslist": [
+    "last 2 version"
+  ]
 }
