--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "react-spinner-material": "^1.4.0"
   },
   "browserslist": [
