--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/AbhijeetRohilla/Javascript-Master#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.45",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.11"
   },
   "dependencies": {
     "cors": "^2.8.5",
