--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
   },
   "homepage": "https://github.com/AbhijeetRohilla/Javascript-Master#readme",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "parcel": "^2.12.0",
     "postcss": "^8.4.45",
     "process": "^0.11.10",
@@ -28,12 +36,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "@testing-library/jest-dom": "github:testing-library/jest-dom",
     "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
-    "react-spinner-material": "^1.4.0"
+    "react-spinner-material": "^1.4.0",
+    "ts-node": "^10.9.2"
   },
   "browserslist": [
     "last 2 version"
